# ares

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Cargo.toml  Cross.toml  LESSMONEY.md  LICENSE  README.md  SECURITY.md  Taskfile.yaml  codecov.yml  test.sh  tools.yaml
.cargo/: config.toml
ares-cli/: Cargo.toml
ares-cli/src/: config.rs  main.rs  redis_conn.rs  secrets.rs  transport.rs  util.rs
ares-cli/src/benchmark/: capture.rs  k8s_loki.rs  manifest.rs  mod.rs  replay.rs  replay_infra.rs  snapshot_s3.rs  tempo_push.rs  versions.rs
ares-cli/src/blue/: delete.rs  evidence.rs  list.rs  mod.rs  operation.rs  report.rs  runtime.rs  status.rs  submit.rs  techniques.rs  triage.rs  watch.rs
ares-cli/src/cli/: benchmark.rs  blue.rs  config.rs  history.rs  mod.rs  ops.rs
ares-cli/src/dedup/: credentials.rs  domains.rs  hashes.rs  labels.rs  mod.rs  tests.rs  users.rs
ares-cli/src/detection/: markdown.rs  mod.rs  playbook.rs  queries.rs  types.rs
ares-cli/src/detection/techniques/: builders.rs  credential.rs  kerberos.rs  lateral.rs  mod.rs  names.rs  tests.rs
ares-cli/src/history/: cost.rs  coverage.rs  get.rs  list.rs  mod.rs  search.rs  types.rs
ares-cli/src/ops/: backfill.rs  correlate.rs  delete.rs  evaluate.rs  inject.rs  inspect.rs  kill.rs  list.rs  mod.rs  queue.rs  report.rs  resolve.rs  runtime.rs  sanitize.rs  sessions.rs  status.rs  stop.rs  submit.rs  tasks.rs  teardown.rs
ares-cli/src/ops/loot/: mod.rs  snapshot.rs
ares-cli/src/orchestrator/: automation_spawner.rs  bootstrap.rs  completion.rs  config.rs  cost_summary.rs  deferred.rs  diversity.rs  exploitation.rs  llm_runner.rs  mod.rs  monitoring.rs  results.rs  routing.rs  strategy.rs  task_queue.rs  throttling.rs
ares-cli/src/orchestrator/automation/: acl.rs  acl_discovery.rs  adcs.rs  adcs_exploitation.rs  bloodhound.rs  certifried.rs  certipy_auth.rs  coercion.rs  crack.rs  credential_access.rs  credential_expansion.rs  credential_reuse.rs  cross_forest_enum.rs  dacl_abuse.rs  delegation.rs  dfs_coercion.rs  dns_enum.rs  domain_user_enum.rs  foreign_group_enum.rs  gmsa.rs  golden_cert.rs  golden_ticket.rs  gpo.rs  gpp_sysvol.rs  group_enumeration.rs  krbrelayup.rs  laps.rs  ldap_signing.rs  localuser_spray.rs  lsassy_dump.rs  machine_account_quota.rs  mod.rs  mssql.rs  mssql_coercion.rs  mssql_exploitation.rs  mssql_link_pivot.rs  nopac.rs  ntlm_relay.rs  ntlmv1_downgrade.rs  password_policy.rs  (+24 more)
ares-cli/src/orchestrator/blue/: auto_submit.rs  callbacks.rs  chaining.rs  investigation.rs  mod.rs  runner.rs  simulated_response.rs  sub_agent.rs  sweep.rs
ares-cli/src/orchestrator/callback_handler/: dispatch.rs  mod.rs  tests.rs
ares-cli/src/orchestrator/cleanup/: capture.rs  dispatcher.rs  engine.rs  journal.rs  mod.rs  registry.rs
ares-cli/src/orchestrator/dispatcher/: mod.rs  submission.rs  task_builders.rs
ares-cli/src/orchestrator/output_extraction/: hashes.rs  hosts.rs  mod.rs  passwords.rs  shares.rs  tests.rs  users.rs
ares-cli/src/orchestrator/recovery/: dedup.rs  manager.rs  mod.rs  normalize.rs  types.rs
ares-cli/src/orchestrator/result_processing/: admin_checks.rs  containment_recovery.rs  discovery_polling.rs  impacket_recovery.rs  mod.rs  parsing.rs  tests.rs  timeline.rs
ares-cli/src/orchestrator/state/: canonicalize.rs  dedup.rs  inner.rs  mod.rs  persistence.rs  replay.rs  shared.rs
ares-cli/src/worker/: blue_task_loop.rs  config.rs  credential_resolver.rs  heartbeat.rs  hosts.rs  mod.rs  tool_check.rs  tool_executor.rs
ares-cli/tests/: ares_blue_smoke.rs
ares-orchestrator/: Cargo.toml
ares-orchestrator/src/: automation_spawner.rs  bootstrap.rs  completion.rs  config.rs  cost_summary.rs  deferred.rs  exploitation.rs  llm_runner.rs  main.rs  monitoring.rs  results.rs  routing.rs  task_queue.rs  throttling.rs
ares-orchestrator/src/automation/: acl.rs  adcs.rs  bloodhound.rs  coercion.rs  crack.rs  credential_access.rs  credential_expansion.rs  delegation.rs  gmsa.rs  golden_ticket.rs  mod.rs  mssql.rs  refresh.rs  s4u.rs  secretsdump.rs  share_enum.rs  shares.rs  stall_detection.rs  trust.rs  unconstrained.rs
ares-orchestrator/src/blue/: auto_submit.rs  callbacks.rs  chaining.rs  investigation.rs  mod.rs  runner.rs  sub_agent.rs
ares-orchestrator/src/callback_handler/: dispatch.rs  mod.rs  query.rs  tests.rs
ares-orchestrator/src/dispatcher/: mod.rs  submission.rs  task_builders.rs
ares-orchestrator/src/output_extraction/: hashes.rs  hosts.rs  mod.rs  passwords.rs  shares.rs  tests.rs  users.rs
ares-orchestrator/src/recovery/: dedup.rs  manager.rs  mod.rs  normalize.rs  requeue.rs  resume_helper.rs  types.rs
ares-orchestrator/src/result_processing/: admin_checks.rs  discovery_polling.rs  mod.rs  parsing.rs  tests.rs  timeline.rs
ares-orchestrator/src/state/: dedup.rs  inner.rs  mod.rs  persistence.rs  shared.rs
ares-orchestrator/src/tool_dispatcher/: auth_throttle.rs  local.rs  mod.rs  redis_dispatcher.rs  tests.rs
ares-tools/: Cargo.toml
ares-tools/python/ares_krb_skew/: sitecustomize.py
ares-tools/src/: acl.rs  args.rs  coercion.rs  concurrency.rs  cracker.rs  credentials.rs  executor.rs  filter.rs  kerberos_skew.rs  lib.rs  recon.rs  sanitize.rs  scope.rs
ares-tools/src/blue/: evidence_validator.rs  loki.rs  loki_bulk.rs  mod.rs  persistence.rs  prometheus.rs  replay_clock.rs  validation.rs
ares-tools/src/cracker/: remote.rs
ares-tools/src/credential_access/: kerberos.rs  misc.rs  mod.rs  secretsdump.rs
ares-tools/src/lateral/: execution.rs  kerberos.rs  mod.rs  mssql.rs  pth.rs
ares-tools/src/parsers/: certipy.rs  cracker.rs  credential_tools.rs  delegation.rs  mod.rs  mssql.rs  nmap.rs  ntsd.rs  secrets.rs  smb.rs  spider.rs  trust.rs  users_shares.rs
ares-tools/src/privesc/: adcs.rs  cross_realm_tgs.py  cve_exploits.rs  delegation.rs  gmsa.rs  mod.rs  trust.rs
ares-worker/: Cargo.toml  build.rs
ares-worker/src/: blue_task_loop.rs  config.rs  heartbeat.rs  hosts.rs  main.rs  tool_check.rs  tool_executor.rs
ares-worker/src/task_loop/: executor.rs  mod.rs  result_handler.rs  types.rs
(+707 files in other folders)
