[package]
name = "ares-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Ares red team orchestration system"

[[bin]]
name = "ares-cli"
path = "src/main.rs"

[features]
default = ["blue"]
blue = ["ares-core/blue"]

[dependencies]
ares-core = { path = "../ares-core", features = ["telemetry"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
dotenvy = "0.15"
