[package]
name = "ares-tools"
version = "0.2.0"
edition = "2021"

[dependencies]
ares-core = { path = "../ares-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
redis = { workspace = true }
tempfile = "3"
flate2 = "1"
base64 = "0.22"
home = "0.5"

[features]
default = ["blue"]
blue = ["ares-core/blue"]

[dev-dependencies]
rstest = "0.26"
approx = "0.5"
ares-core = { path = "../ares-core", features = ["test-utils", "blue"] }

[lints]
workspace = true
